<resources>
    <string name="app_name">ListViewExample</string>
    <string name="simpleStrings">Simple String Array</string>
    <string name="objectListView">Simple Object Array</string>
    <string name="UpdatingArrayList">Updating Array List</string>
    <string name="AddColor">Add Color</string>
    <string name="add">Add</string>
    <string name="EmailExample">List View Email Example</string>
    <string name="recyclerView">Recycler View Cartoon Example</string>
    <string name="gridview">Grid View Dessert Example</string>
    <string name="dessertNameHint">New Dessert</string>
    <string name="caloriesHint">Calories</string>
</resources>
